--- a/views/Allconferencias.pug
+++ b/views/Allconferencias.pug
@@ -55,7 +55,7 @@ block content
               |   #{conferencia.tags} 
       if !conferencias.length
         .container
-          h3 No se han encontrado conferencias
+          h3.null No se han encontrado conferencias
         
          
     .col-sm-5
