--- a/views/Allformaciones.pug
+++ b/views/Allformaciones.pug
@@ -55,7 +55,7 @@ block content
               |   #{formacion.tags} 
       if !formaciones.length
         .container
-          h3 No se han encontrado formaciones
+          h3.null No se han encontrado formaciones
         
          
     .col-sm-5
