--- a/views/Allinstructores.pug
+++ b/views/Allinstructores.pug
@@ -55,7 +55,11 @@ block content
               |   #{instructor.tags} 
       if !instructores.length
         .container
-          h3 No se han encontrado instructores
+          h3.null No se han encontrado instructores
+          br
+          br
+          br
+          br
         
          
     .col-sm-5
