--- a/views/Alltalleres.pug
+++ b/views/Alltalleres.pug
@@ -36,13 +36,13 @@ block content
               div
                 
                 <img src="https://maxcdn.icons8.com/iOS7/PNG/25/Maps/location-25.png" title="Marker" width="26" height="26">
-                  |&nbsp;&nbsp; Localización #{talleres.localitation}
+                  |&nbsp;&nbsp; Localización #{taller.localitation}
                 
                  
               br
               div
                 <img src="https://maxcdn.icons8.com/iOS7/PNG/25/Time_And_Date/calendar-25.png" title="Calendar" width="26" height="26">
-                |&nbsp;&nbsp;Fecha: #{talleres.startDate}
+                |&nbsp;&nbsp;Fecha: #{taller.startDate}
               p
                 |
               hr
@@ -57,15 +57,14 @@ block content
 
       if !talleres.length
         .container
-          h3 No se han encontrado talleres
+          h3.null No se han encontrado talleres
         
          
     .col-sm-5
       .col.sm-12
         div#maps
         
-         
-      
+     
     
 
             
