--- a/views/add-event-formacion.pug
+++ b/views/add-event-formacion.pug
@@ -32,7 +32,7 @@ block content
             br
             fieldset.form-group.col-sm-2
               label Fotografía
-              input.img-picker(type="file", name="image_item" id="image_item" )   
+              input.img-picker(type="file", name="imageUrl" id="image_item" value= !formaciones ? " " : formaciones.imageUrl)   
               //- .img-picker
             
             //- fieldset.form-group.col-sm-2
