--- a/views/layout.pug
+++ b/views/layout.pug
@@ -69,11 +69,41 @@ nav.navbar.navbar-default.navbar-fixed-top.header-mine
 
 include includes/footer.pug
   block content
+  
+  footer.footer.hr-line
+    div.map-food.col-xs-12
+      div.col-sm-offset-3
+      div.col-xs-3.mobile1
+          h4 ANUNCIATE
+          ul
+            li
+               a(href='/login') Pruébalo y anúnciate gratis
+      div.col-xs-3.mobile2
+          h4 BUSCA Y ENCUENTRA
+          ul
+            li 
+              a(href='/retiros') Retiros
+            li 
+              a(href='/formaciones') Formaciones
+            li 
+              a(href='/talleres') Talleres
+            li 
+              a(href='/conferencias') Conferencias
+            li 
+              a(href='/instructores') Instructores
+      div.mob3
+        div.col-xs-3
+          h4 INICIO
+          ul
+            li 
+              a(href='/') Encuentra tu camino
+    div.col-xs-4
+      div.copyright.col-xs-12
+        p.copy
+        | Copyright ® 2017, 
+        a(href='https://www.linkedin.com/in/carles-far-pierres-390160139/?trk=nav_responsive_tab_profile_pic') Carles far - Front developer
 
-  footer.footer
-    p.copy
-    | Copyright ® 2017, 
-    a(href='https://www.linkedin.com/in/carles-far-pierres-390160139/?trk=nav_responsive_tab_profile_pic') Carles far - Front developer
+
     
   script(src="/bower_components/jquery/dist/jquery.min.js")
   script(src="/bower_components/bootstrap/dist/js/bootstrap.min.js")
