--- a/views/myAcount.pug
+++ b/views/myAcount.pug
@@ -41,7 +41,7 @@ block content
                     .caption
                       div.container.size-mods
                           h2.text-center 
-                          |Titulo: #{retiro.title}, #{retiro.mision}
+                          |Titulo: #{retiro.title}
                           p
                           i.glyphicon.glyphicon-calendar
                           | Fecha Public: #{retiro.createdEvent} 
@@ -143,7 +143,7 @@ block content
                     .caption
                       div.container.size-mods
                           h2.text-center 
-                          |Titulo: #{formacion.title}, #{formacion.mision}
+                          |Titulo: #{formacion.title}
                           p
                           i.glyphicon.glyphicon-calendar
                           | Fecha Public: #{formacion.createdEvent} 
