search at moment

--- a/public/sass/_carrussel.sass
+++ b/public/sass/_carrussel.sass
@@ -9,9 +9,9 @@
   @media screen and (min-width:300px) and (max-width: 1231px)
     margin-top: 79px
 .intros
-  margin-top: 24px
+  margin-top: 22px
   position: absolute
-  margin-left: 25px
+  margin-left: 211px
   border-bottom: 1px solid #f8af00
   outline: 0px
   border-top: 0px
@@ -481,6 +481,41 @@ div.form-group.label-taller
   font-size: 40px
 .text-bot
   font-size: 22px
+.encuentra
+  max-width: 300px !important
+  margin: 0 auto
+  position: relative
+.encuentra input 
+  font-size: 18px
+  border: 1px solid #cecece
+  border-radius: 3px
+  border-bottom: 1px solid #f8af00 !important
+  outline: 0px !important
+  border-top: 0px
+  border-left: 0px
+  border-right: 0px
+  width: 173px
+  font-size: 21px
+  margin-left: -148px
+  margin-top: 18px
+
+.encuentra i 
+  position: absolute
+  cursor: pointer
+  left: 0px
+  top: 20px
+.namer
+  color: #062f4a
+.dater
+  color: grey
+
+.local 
+  color: grey
+
+.tags
+  color: grey
+
+
 
 .copyright
   display: flex
