--- a/views/add-event-retiro.pug
+++ b/views/add-event-retiro.pug
@@ -32,7 +32,7 @@ block content
             br
             fieldset.form-group.col-sm-2
               label Fotografía
-              input.img-picker(type="file", name="imageUrl" id="image_item" value= !retiros ? " " : retiros.imageUrl )    
+              input.img-picker(type="file", name="imageUrl" id="image_item" value= !retiros ? " " : retiros.image_item )    
               //- .img-picker
             
             //- fieldset.form-group.col-sm-2
