--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,9 +14,9 @@
       margin-top: 79px; } }
 
 .intros {
-  margin-top: 24px;
+  margin-top: 22px;
   position: absolute;
-  margin-left: 25px;
+  margin-left: 211px;
   border-bottom: 1px solid #f8af00;
   outline: 0px;
   border-top: 0px;
@@ -491,6 +491,43 @@ div.form-group.label-taller {
 
 .text-bot {
   font-size: 22px; }
+
+.encuentra {
+  max-width: 300px !important;
+  margin: 0 auto;
+  position: relative; }
+
+.encuentra input {
+  font-size: 18px;
+  border: 1px solid #cecece;
+  border-radius: 3px;
+  border-bottom: 1px solid #f8af00 !important;
+  outline: 0px !important;
+  border-top: 0px;
+  border-left: 0px;
+  border-right: 0px;
+  width: 173px;
+  font-size: 21px;
+  margin-left: -148px;
+  margin-top: 18px; }
+
+.encuentra i {
+  position: absolute;
+  cursor: pointer;
+  left: 0px;
+  top: 20px; }
+
+.namer {
+  color: #062f4a; }
+
+.dater {
+  color: grey; }
+
+.local {
+  color: grey; }
+
+.tags {
+  color: grey; }
 
 .copyright {
   display: flex; }
