number events at moment

--- a/views/Allretiros.pug
+++ b/views/Allretiros.pug
@@ -25,7 +25,7 @@ block content
       .hr-line2
         br
         .container
-          div.resultado Total encontrados: #{retiros.length}
+          div.resultado 
       div.over
          
        
