--- a/public/sass/_carrussel.sass
+++ b/public/sass/_carrussel.sass
@@ -9,9 +9,10 @@
   @media screen and (min-width:300px) and (max-width: 1231px)
     margin-top: 79px
 .intros
-  margin-top: 22px
+  z-index: 1
+  margin-top: -23px
   position: absolute
-  margin-left: 211px
+  margin-left: 793px
   border-bottom: 1px solid #f8af00
   outline: 0px
   border-top: 0px
@@ -19,6 +20,7 @@
   border-right: 0px
   width: 173px
   font-size: 21px
+
   @media screen and (min-width:300px) and (max-width: 768px)
     display: none 
   @media screen and (min-width:300px) and (max-width: 1024px)
@@ -221,7 +223,6 @@ div.form-group.label-taller
   margin-top: -60px
 .hr-line
   margin-bottom: 30px
-  margin-top: -30px !important
   width: 100%
   height: 4px
   background-color: #f8af00
@@ -390,13 +391,12 @@ div.form-group.label-taller
   a:hover
     color: #f8af00 !important
   color: white
-  margin: auto 0px
+  
   padding: 10px
   width: 100%
   height: 257px
   background-color: #1d1d1b
   clear: both
-  margin-top: 30px 
   position: relative
   bottom: 0
   border-style: solid
@@ -494,15 +494,15 @@ div.form-group.label-taller
   border-top: 0px
   border-left: 0px
   border-right: 0px
-  width: 173px
+  width: 345px
   font-size: 21px
-  margin-left: -148px
+  margin-left: -36px
   margin-top: 18px
 
 .encuentra i 
   position: absolute
   cursor: pointer
-  left: 0px
+  left: 280px
   top: 20px
 .namer
   color: #062f4a
@@ -514,7 +514,8 @@ div.form-group.label-taller
 
 .tags
   color: grey
-
+.view-more
+  width: 100%
 
 
 .copyright
