--- a/public/sass/_carrussel.sass
+++ b/public/sass/_carrussel.sass
@@ -10,15 +10,15 @@
     margin-top: 79px
 .intros
   z-index: 1
-  margin-top: -23px
-  position: absolute
-  margin-left: 793px
+  margin-top: -18px
+  position: fixed
+  margin-left: 874px
   border-bottom: 1px solid #f8af00
   outline: 0px
   border-top: 0px
   border-left: 0px
   border-right: 0px
-  width: 173px
+  width: 190px
   font-size: 21px
 
   @media screen and (min-width:300px) and (max-width: 768px)
@@ -28,6 +28,13 @@
   @media screen and (min-width:300px) and (max-width: 1231px)
     margin-top: 79px
 
+div.gmnoprint.gm-bundled-control.gm-bundled-control-on-bottom
+  margin: 650px !important
+  padding-left: -30px !important
+
+.gm-style
+  left: -66px !important
+  
 body
   padding-top: 20px
   font-family: Lobster Two
