--- a/views/login-register.pug
+++ b/views/login-register.pug
@@ -4,8 +4,12 @@ block content
 		p.welcome-top Acceso a usuarios
 		.hr-line
 	.container
-		a#login(href="") Registrarse
-		a#register(href="") Iniciar Sesión
+		ul.logueo
+			li.log
+				a#login(href="") Registrarse
+			li.reg
+				a#register(href="") Iniciar sesión
+
 	.container.login-top
 		.row
 			.col-md-6.col-md-offset-3
