--- a/public/sass/_carrussel.sass
+++ b/public/sass/_carrussel.sass
@@ -20,7 +20,7 @@
   border-right: 0px
   width: 190px
   font-size: 21px
-  background-color: rgb(164, 221, 245) !important
+ 
 
   @media screen and (min-width:300px) and (max-width: 768px)
     display: none 
@@ -177,7 +177,7 @@ label.size-categories
 
 .center-logo
 
-  li a
+  li 
     @media screen and (min-width:100px) and (max-width: 747px)
       font-size: 15px
       
