--- a/views/add-event-taller.pug
+++ b/views/add-event-taller.pug
@@ -211,5 +211,5 @@ block content
   script(src='/bower_components/bootstrap/dist/js/bootstrap.min.js')
   script(src='/js/main.js')       
   script(src='/js/disabled-input.js')
-  script(src='/js/maps.js')
+  script(src='/js/maps/maps.js')
   script(src = 'https://maps.googleapis.com/maps/api/js?key=AIzaSyD2CtWqsM0k23XnQMwJQXASOmNEkE8IAgM&callback=initMap')
