--- a/views/layout.pug
+++ b/views/layout.pug
@@ -101,7 +101,7 @@ include includes/footer.pug
       div.copyright.col-xs-12
         p.copy
         | Copyright ® 2017, 
-        a(href='https://www.linkedin.com/in/carles-far-pierres-390160139/?trk=nav_responsive_tab_profile_pic') Carles far - Front developer
+        a(href='https://www.linkedin.com/in/carles-far-pierres-390160139/?trk=nav_responsive_tab_profile_pic') Carles far - Full Stack Developer
 
 
     
