--- a/views/home.pug
+++ b/views/home.pug
@@ -31,7 +31,7 @@ block content
                       
             // End Item
             .item
-              img.img-carrusel.img-opac(src='../img/formaciones.gif', height='-300px;')
+              img.img-responsive.img-carrusel.img-opac(src='../img/formaciones.gif', height='-300px;')
               .carousel-caption
                 .form-group.label-taller.font-retiro
                   p.text-center.font-categories.size-title-categories Formaciones
@@ -48,7 +48,7 @@ block content
                     
             // End Item
             .item
-              img.img-carrusel.img-opac(src='../img/talleres.gif')
+              img.img-responsive.img-carrusel.img-opac(src='../img/talleres.gif')
               .carousel-caption
                 .form-group.label-taller.font-retiro
                   p.text-center.font-categories.size-title-categories Talleres
@@ -65,7 +65,7 @@ block content
                     
             // End Item
             .item
-              img.img-carrusel.img-opac(src='../img/conferencias.gif')
+              img.img-responsive.img-carrusel.img-opac(src='../img/conferencias.gif')
               .carousel-caption
                 .form-group.label-taller.font-retiro
                   p.text-center.font-categories.size-title-categories Conferencias
@@ -82,7 +82,7 @@ block content
                     
               // End Item
             .item
-              img.img-carrusel.img-opac(src='../img/maestros.gif')
+              img.img-responsive.img-carrusel.img-opac(src='../img/maestros.gif')
               .carousel-caption
                 .form-group.label-taller.font-retiro
                   p.text-center.font-categories.size-title-categories Instructores 
